--- a/estilo.css
+++ b/estilo.css
@@ -199,121 +199,42 @@ color: #ff6790;
     display: flex;
     justify-content: space-between;
     max-width: 1100px;
-    margin: 30px auto;
+    margin: 20px auto;
 }
 #servicios .fila .servicio{
-    max-width: 350px;
+    max-width: 340px;
     background-color: #fff;
-    padding: 30px;
+    padding: 10px;
     margin: 0 5px;
     border-radius: 5px;
     transition: .5s;
 }
 #servicios .fila .servicio:hover{
-    box-shadow: 5px 5px 10px #565656, -5px -5x 10px #8a8a8a;
     background-color: #ff6790;
 }
-#servicios .fila .servicio h4{
-    font-size: 22px;
-    margin-bottom: 25px;
+#servicios .fila .servicio img{
+    width: 150px;
+    height: 150px;
+    object-fit: fill;
+    transition: .5s;
 }
-#servicios .fila .servicio .icono{
-    display: inline-block;
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    background-color: #d3d3d3;
-    padding: 20px;
-    margin-bottom: 25px;
+#servicios .fila .servicio .info{
+    position: fixed;
+    left: 0;
+    background-color: rgba(0,0,0,.8);
+    color: #e96565;
+    width: 100%;
+    padding: 10px;
+    opacity: 0;
+    bottom: -40px;
+    transition: .5s;
 }
-#servicios .fila .servicio hr{
-    width: 40%;
-    margin: auto;
-    color: #565656;
-    margin-bottom: 15px;
+#servicios .fila .servicio:hover .info{
+    opacity: 1;
+    bottom: 0;
 }
-#servicios .fila .servicio ul{
-    list-style: none;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-}
-#servicios .fila .servicio p{
-    font-size: 14px;
-    line-height: 22px;
 
-}
-/*SECCION HABILIDADES */
-.contenedor-skills{
-    background: linear-gradient(#eb5a5acc,rgba(33,16,16,.8)),url("img/fondo-skills.jpg");
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    padding: 100px 0;
-    text-align: center;
-}
-.contenedor-skills .skill{
-    max-width: 600px;
-    margin: 30px auto;
-}
-.contenedor-skills .skill .info{
-    display: flex;
-    justify-content: space-between;
-}
-.contenedor-skills .skill .lista{
-    display: inline-block;
-    margin-right: 20px;
-    height: 10px;
-    width: 10px;
-    background-color: #fff;
-}
-.contenedor-skills .skill .barra{
-    background-color: #919191;
-    width: 100%;
-    height: 6px;
-    margin: 10px 0;
-}
-.contenedor-skills .skill .barra .barra-progreso1{
-    background-color: #fff;
-    width: 95%;
-    height: 6px;
-    animation: progreso1 2s forwards;
-}
-.contenedor-skills .skill .barra .barra-progreso2{
-    background-color: #fff;
-    width: 100%;
-    height: 6px;
-    animation: progreso2 2s forwards;
-}
-.contenedor-skills .skill .barra .barra-progreso3{
-    background-color: #fff;
-    width: 95%;
-    height: 6px;
-    animation: progreso3 2s forwards;
-}
-.contenedor-skills .skill .barra .barra-progreso4{
-    background-color: #fff;
-    width: 90%;
-    height: 6px;
-    animation: progreso4 2s forwards;
-}
-@keyframes progreso1{
-    0%{width: 0;}
-    100%{width: 95%;}
-}
-@keyframes progreso2{
-    0%{width: 0;}
-    100%{width: 100%;}
-}
-@keyframes progreso3{
-    0%{width: 0;}
-    100%{width: 95%;}
-}
-@keyframes progreso4{
-    0%{width: 0;}
-    100%{width: 90%;}
-}
+
 /*SECCION PORTAFOLIO */
 #portfolio{
     max-width: 1100px;
@@ -335,7 +256,8 @@ color: #ff6790;
     margin: 30px 0;
 }
 #portfolio .fila .proyecto{
-    max-width: 450px;
+    width: 350px;
+    height: 200px;
     border: 1px solid #000;
     margin: 0 10px;
     position: relative;
